--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
-# Enable the rewrite engine
+# Enable Rewrite Engine
 RewriteEngine On
 
-# Remove .php extension from URLs
+# Handle requests without .php extension
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^\.]+)$ $1.php [L]
