--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "aws/aws-sdk-php": "^3.321"
+        "aws/aws-sdk-php": "^3.321",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
