--- a/webtgep/package.json
+++ b/webtgep/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-  "build": "tailwindcss -i ./styles.css -o ./output.css --watch"
-},
+    "build": "tailwindcss -i ./styles.css -o ./output.css --watch"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "flowbite": "^2.5.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   }
