--- a/.htaccess
+++ b/.htaccess
@@ -7,5 +7,10 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^\.]+)$ $1.php [L]
 
 # Redirect requests with .php extension to clean URLs
-RewriteCond %{THE_REQUEST} \s/+([^.]+)\.php [NC]
+RewriteCond %{THE_REQUEST} \s/+([^.]+)\.php[?\s] [NC]
 RewriteRule ^ /%1 [R=301,L]
+
+# Set Cache-Control headers for specific file types
+<FilesMatch "\.(html|htm|js|css|php)$">
+    Header always set Cache-Control "no-cache, no-store, must-revalidate"
+</FilesMatch>
