--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,8 @@ RewriteCond %{THE_REQUEST} \s/+([^.]+)\.php[?\s] [NC]
 RewriteRule ^ /%1 [R=301,L]
 
 # Set Cache-Control headers for specific file types
-<FilesMatch "\.(html|htm|js|css|php)$">
-    Header always set Cache-Control "no-cache, no-store, must-revalidate"
-</FilesMatch>
+<IfModule mod_headers.c>
+    <FilesMatch "\.(html|htm|js|css|php)$">
+        Header always set Cache-Control "no-cache, no-store, must-revalidate"
+    </FilesMatch>
+</IfModule>
